LoginTest logic