@@ -84,78 +84,5 @@
         </dependency>
     </dependencies>
 
-    <build>
-        <plugins>
-            <!--maven-compiler-plugin-->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.7.0</version>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>
-            </plugin>
-        </plugins>
-
-        <pluginManagement>
-            <plugins>
-                <!--maven-surefire-plugin-->
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-surefire-plugin</artifactId>
-                    <version>2.20</version>
-                    <configuration>
-                        <testFailureIgnore>true</testFailureIgnore>
-                        <!--argLine>
-                            -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
-                        </argLine-->
-                        <argLine>-Xmx4096m -XX:MaxPermSize=4096m</argLine>
-                        <suiteXmlFiles>
-                            <!-- to run some xml file with suite from command line use:
-                            mvn -DsuiteXmlFile=<path_to_xml_file> clean test
-                            xml files with suites are placed in: src\test\resources\
-                            so, for example -DsuiteXmlFile=src\test\resources\
-                            -->
-                            <suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
-                        </suiteXmlFiles>
-                        <systemProperties>
-                            <property>
-                                <name>allure.results.directory</name>
-                                <value>${project.build.directory}/allure-results</value>
-                            </property>
-                            <property>
-                                <name>allure.link.tms.pattern</name>
-                                <value>https://vmmreg32.testrail.net/index.php?/cases/view/{}</value>
-                            </property>
-                        </systemProperties>
-                    </configuration>
-                </plugin>
-
-                <!--allure-maven-->
-                <plugin>
-                    <groupId>io.qameta.allure</groupId>
-                    <artifactId>allure-maven</artifactId>
-                    <version>2.10.0</version>
-                    <executions>
-                        <execution>
-                            <goals>
-                                <goal>report</goal>
-                            </goals>
-                        </execution>
-                    </executions>
-                    <configuration>
-                        <!--<reportVersion>2.8.0</reportVersion>-->
-                        <!--It is a work around for Allure bug: see https://github.com/allure-framework/allure2/issues/832 -->
-                        <!--<allureDownloadUrl>https://github.com/allure-framework/allure2/releases/download/2.8.0/allure-2.8.0.zip</allureDownloadUrl>-->
-                        <resultsDirectory>allure-results</resultsDirectory>
-                        <propertiesFilePath>${basedir}/..dt_core_common/src/main/resources/allure.properties
-                        </propertiesFilePath>
-                    </configuration>
-                </plugin>
-            </plugins>
-        </pluginManagement>
-    </build>
-
 
 </project>
